# HPAS_A1

./: .gitignore
A2/A2_P1/: QuadtreeGradientCompute.cpp  main.cpp
A2/A2_P2/: .gitignore  CMakeLists.txt
A2/A2_P2/shaders/: gpu_optimization_vert.glsl  sparse_leap_occupancy_frag.glsl  sparse_leap_occupancy_vert.glsl  viewer_output_frag.glsl  viewer_output_vert.glsl  volvis_colorcube_frag.glsl  volvis_rendermode_compositing_frag.glsl  volvis_rendermode_isosurface_frag.glsl  volvis_rendermode_mip_frag.glsl  volvis_screen_filling_quad_frag.glsl  volvis_screen_filling_quad_vert.glsl  volvis_surface_cube_frag.glsl  wireframe_cube_frag.glsl  wireframe_cube_vert.glsl
A2/A2_P2/src/: CMakeLists.txt  main.cpp
A2/A2_P2/src/render/: gpu_mesh_config.h  gpu_renderer.cpp  gpu_renderer.h  gpu_volume_config.h  render_config.h  renderer.cpp  renderer.h
A2/A2_P2/src/sparseleap/: OccupancyHistogramTree.h
A2/A2_P2/src/ui/: full_screen_texture_gl.cpp  menu.cpp  menu.h  surface_cube.cpp  trackball.cpp  trackball.h  transfer_func.cpp  transfer_func.h  window.cpp  wireframe_cube.cpp
A2/A2_P2/src/volume/: gpu_volume.cpp  gpu_volume.h  gradient_volume.cpp  gradient_volume.h  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h  volume.cpp  volume.h
HPAS_Assignment_1/: .gitignore  CMakeLists.txt  README.md  imgui.ini  scaling.csv
HPAS_Assignment_1/framework/: CMakeLists.txt
HPAS_Assignment_1/framework/include/framework/: Callbacks.h  Camera.h  DebugRenderData.h  FileDialogs.h  FileReader.h  FontHandler.h  Framework.h  NDArray.h  PMatrixCalculator.h  PlotRenderer.h  SavedSettings.h  ScrollManager.h  Text.h  WindowHandler.h  disable_all_warnings.h
HPAS_Assignment_1/framework/include/framework/datareaders/: DataReader.h  MNISTReader.h  MyeloidReader.h  NearestNeighbourCalculator.h  PlanariaReader.h
HPAS_Assignment_1/framework/include/framework/shaders/: AbstractShader.h  ComputeShader.h  ComputeShaderInterface.h  Shader.h  ShaderInterface.h
HPAS_Assignment_1/framework/shaders_source/: allDistancesCompute.shader  debugLineFragment.shader  debugLineVertex.shader  debugPointFragment.shader  debugPointVertex.shader  lineFragment.shader  lineVertex.shader  pointFragment2D.shader  pointVertex2D.shader  squareDistancesCompute.shader  textFragment.shader  textVertex.shader
HPAS_Assignment_1/framework/src/: Callbacks.cpp  Camera.cpp  FileDialogs.cpp  FileReader.cpp  FontHandler.cpp  Framework.cpp  PMatrixCalculator.cpp  PlotRenderer.cpp  SavedSettings.cpp  ScrollManager.cpp  Text.cpp  WindowHandler.cpp
HPAS_Assignment_1/framework/src/datareaders/: MNISTReader.cpp  MyeloidReader.cpp  NearestNeighbourCalculator.cpp  PlanariaReader.cpp
HPAS_Assignment_1/framework/src/shaders/: AbstractShader.cpp  ComputeShader.cpp  ComputeShaderInterface.cpp  Shader.cpp  ShaderInterface.cpp
HPAS_Assignment_1/resources/datasets/myeloid8000/: myeloid_8000.csv  myeloid_8000_labels.csv
HPAS_Assignment_1/resources/datasets/planaria/: R_annotation.txt  colors_dataset.txt
HPAS_Assignment_1/src/: Settings.cpp  Settings.h  UserInterface.cpp  UserInterface.h  main.cpp
HPAS_Assignment_1/src/ft/: ft.cpp  ft.h
HPAS_Assignment_1/src/tsne/: PCA.cpp  PCA.h  tsne.cpp  tsne.h
HPAS_Assignment_1/src/tsne/GradientComputers/: FItSNE.h  FiTSNE.cpp  QuadTree.h  QuadtreeGradientCompute.cpp  QuadtreeGradientCompute.h  TSNEGradientCompute.cpp  TSNEGradientCompute.h  WrappedFItSNE.h
HPAS_Assignment_1/src/tsne/square_distance/: GPUSquareDistanceCalculator.cpp  GPUSquareDistanceCalculator.h  GridSquareDistanceCalculator.cpp  GridSquareDistanceCalculator.h  NaiveSquareDistanceCalculator.cpp  NaiveSquareDistanceCalculator.h  SquareDistanceCalculator.h
HPAS_Assignment_1/test/: NDArrayTest.cpp  ft.cpp
